--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -35,7 +35,7 @@
     </form>
 
     <hr />
-
+    <th:block th:replace = "list-jobs :: jobsLoop"></th:block>
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
 </div>
